--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,14 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html itemscope itemtype="http://schema.org/WebApplication">
 <head>
     <title>LigerShark</title>
+	<meta charset="utf-8" />
+	<link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-
-	<h1>LigerShark</h1>
+	<div>
+		<h1>LigerShark</h1>
+		<p>Find us on <a href="https://github.com/ligershark/">GitHub</a></p>
+	</div>
 </body>
 </html>
