Setting correct content type

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en" itemscope itemtype="http://schema.org/WebApplication">
 <head prefix="og: http://ogp.me/ns#">
 	<title>LigerShark</title>
-	<meta charset="utf-8" />
 	<meta name="description" content="The home of the GitHub organization LigerShark" />
 	<meta name="viewport" content="width=800">
 	<meta name="author" content="Sayed Hashimi and Mads Kristensen" />
