Absolute URL for social integration

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 	<meta property="og:description" content="LigerShark" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://ligershark.com" />
-	<meta property="og:image" content="/img/background.png" />
+	<meta property="og:image" content="http://ligershark.com/img/background.png" />
 
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="LigerShark" />
 	<meta name="twitter:description" content="The home of the GitHub organization LigerShark" />
-	<meta name="twitter:image" content="/img/background.png" />
+	<meta name="twitter:image" content="http://ligershark.com/img/background.png" />
 
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
